--- a/cssMainPage.css
+++ b/cssMainPage.css
@@ -11,7 +11,7 @@
 
   header {
     height: 40px;
-    background-color: #66676d;
+    background-color: #000000;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -28,18 +28,17 @@
   }
   
   .nav-header a {
-    background-color: white;
-    color: #1e90ff;
+    background-color: #184F1E;
+    border-radius: 10px;
+    color: white;
     padding: 5px 5px;
     text-decoration: none;
-    border: 2px solid white;
     font-weight: bold;
   }
   
   .btnHeaer:hover{
     background-color: #ffffff33;
-    border-color: #ffffff;
-    color: #ffffff;
+    border: 2px solid #184F1E;
   }
 
   main {
@@ -49,29 +48,46 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 30px;
+    background: #184f1e;
+background: linear-gradient(90deg,rgba(24, 79, 30, 1) 10%, rgba(6, 20, 8, 1) 33%, rgba(0, 0, 0, 1) 69%, rgba(24, 79, 30, 1) 94%);
   }
 
   footer {
     height: 80px;
-    background-color: #333;
+    background-color: #000000;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  section {
-    border: #333 solid 1px;
   }
   #seccionMuestraVS {
     padding: auto;
   }
   #seccionMuestraVS h1, h3 {
     text-align: center;
+    color: antiquewhite;
   }
   #seccionMuestraEqipos {
     padding: 5%;
-    overflow: scroll;
+    display: flex;
+    justify-content: center;
   }
+
+  #seccionMuestraEqipos div {
+    width: 75px;
+    height: 75px;
+  }
+  #seccionMuestraEqipos div img{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    display: block;
+    border-radius: 10px;
+    background-color: wheat;
+  }
+  
+
 
   #seccionMuestraTargetas{
     padding: auto;
@@ -84,7 +100,7 @@
     margin-bottom: 20px;
   }
   
-    .gridVersusContainer {
+  .gridVersusContainer {
     background-color: #ffffff;
     border: 2px dashed #999;
     display: flex;
@@ -115,7 +131,7 @@
   /* Contenedor central */
 
   #versusContainer{
-    width: 25%;  
+    width: 25%;
   }
 
   #versusContainer img{
@@ -135,5 +151,29 @@
     padding: 5px;
     overflow-wrap: break-word;
     text-align: center;
+    padding-bottom: 10px;
+    color: white;
+    background-color: grey;
+    border-radius: 20%;
   }
-  
+  #seccionMuestraTargetas div h4{
+    margin: 10px;
+  }
+    #seccionMuestraTargetas img{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    display: block;
+    border-radius: 50px;
+  }
+
+  /*Table Coleciones*/
+  #seccionTablaColeccion table, th, td {
+    border: 1px solid black;
+    background: grey;
+    text-align: center;
+  }
+  #seccionTablaColeccion table{
+    width: 100%;
+    justify-content: center;
+  }
