--- a/cssMainPage.css
+++ b/cssMainPage.css
@@ -27,7 +27,7 @@
     justify-content: center;
   }
   
-  .nav-header a {
+  .nav-header a, .btnHeaer {
     background-color: #184F1E;
     border-radius: 10px;
     color: white;
@@ -87,7 +87,31 @@ background: linear-gradient(90deg,rgba(24, 79, 30, 1) 10%, rgba(6, 20, 8, 1) 33%
     background-color: wheat;
   }
   
-
+#fotoCabecera {
+  padding: 10px;
+  border: solid 1px white;
+  border-radius: 100px;
+      background-color: rgb(0, 0, 0);
+          padding: 10px;
+    border: green solid 1px;
+    color: white;
+}
+#fotoCabecera  div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+#fotoCabecera  div img{
+    max-width: 50%;
+    max-height: 50%;
+    object-fit: contain;
+    display: block;
+    border-radius: 100px;
+    border: #184F1E solid 1px;
+}
 
   #seccionMuestraTargetas{
     padding: auto;
@@ -145,7 +169,7 @@ background: linear-gradient(90deg,rgba(24, 79, 30, 1) 10%, rgba(6, 20, 8, 1) 33%
   /*seccionMuestraTargetas*/
   #seccionMuestraTargetas div {
     height: auto;
-    width: 200px;
+    width: 500px;
     border: 1px solid black;
     margin: 10px;
     padding: 5px;
@@ -153,8 +177,10 @@ background: linear-gradient(90deg,rgba(24, 79, 30, 1) 10%, rgba(6, 20, 8, 1) 33%
     text-align: center;
     padding-bottom: 10px;
     color: white;
-    background-color: grey;
+    background-color: rgb(0, 0, 0);
     border-radius: 20%;
+    padding: 10px;
+    border: green solid 1px;
   }
   #seccionMuestraTargetas div h4{
     margin: 10px;
