--- a/cssMainPage.css
+++ b/cssMainPage.css
@@ -40,7 +40,7 @@
     background-color: #ffffff33;
     border: 2px solid #184F1E;
   }
-
+  /*asdad*/
   main {
     min-height: calc(100vh - 120px); /* 100% height - header (80px) - footer (80px) */
     padding: 20px;
