--- a/cssMainPage.css
+++ b/cssMainPage.css
@@ -95,6 +95,8 @@ background: linear-gradient(90deg,rgba(24, 79, 30, 1) 10%, rgba(6, 20, 8, 1) 33%
           padding: 10px;
     border: green solid 1px;
     color: white;
+    margin-left: 400px;
+    margin-right: 400px;
 }
 #fotoCabecera  div {
   display: flex;
@@ -179,7 +181,7 @@ background: linear-gradient(90deg,rgba(24, 79, 30, 1) 10%, rgba(6, 20, 8, 1) 33%
     color: white;
     background-color: rgb(0, 0, 0);
     border-radius: 20%;
-    padding: 10px;
+    padding: 20px;
     border: green solid 1px;
   }
   #seccionMuestraTargetas div h4{
